fixes z-index within react-select options menu

--- a/src/client/components/elements/ReactSelect/index.scss
+++ b/src/client/components/elements/ReactSelect/index.scss
@@ -51,6 +51,7 @@ div.react-select {
   }
 
   .rs__menu {
+    z-index: 2;
     border-radius: 0;
     @include inputShadowActive;
   }
